[gd_scene load_steps=13 format=3 uid="uid://bevs4kaltelgf"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_edxx8"]
[ext_resource type="Texture2D" uid="uid://blav2k2ybwc32" path="res://scenes/game_object/player/player.png" id="1_yo7ac"]
[ext_resource type="PackedScene" uid="uid://cvpfleud8foyn" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_cvrh8"]
[ext_resource type="PackedScene" uid="uid://ccssy51mqslb7" path="res://scenes/component/health_component.tscn" id="3_2tl3v"]

[sub_resource type="Animation" id="Animation_0bqx1"]
resource_name = "walk"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.8, 0.3, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.7, 1.2), Vector2(1.5, 0.7), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ymryj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_27rwn"]
_data = {
"RESET": SubResource("Animation_ymryj"),
"walk": SubResource("Animation_0bqx1")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nrrt0"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3a5ek"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_6eftn"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bde3e"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8d64o"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_edxx8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_27rwn")
}

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_cvrh8")]

[node name="HealthComponent" parent="." instance=ExtResource("3_2tl3v")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -23.0
offset_right = 16.0
offset_bottom = -17.0
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_nrrt0")
theme_override_styles/fill = SubResource("StyleBoxFlat_3a5ek")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PuckupArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -5)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PuckupArea"]
shape = SubResource("CircleShape2D_6eftn")

[node name="ColisionArea2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -5)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColisionArea2D"]
shape = SubResource("CircleShape2D_bde3e")
debug_color = Color(0.73927, 0.00375224, 9.62615e-08, 0.42)

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_yo7ac")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_8d64o")

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="timeout" from="DamageIntervalTimer" to="." method="_on_damage_interval_timer_timeout"]
[connection signal="body_entered" from="ColisionArea2D" to="." method="_on_colision_area_2d_body_entered"]
[connection signal="body_exited" from="ColisionArea2D" to="." method="_on_colision_area_2d_body_exited"]
